# gensec-doc-generator

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.md
output/md/: 01.1_Setup.md  01.2_Ollama.md  01.3_Programmatic_Model_Access.md  01.4_Model_Testing.md  02.1_LangChain_Tour.md  02.2_LangChain_Documents.md  02.3_LangChain_RAG_application.md  02.4_Homework.md  03.1_LangChain_Agents.md  03.2_Homework.md  04.1_MCP.md  04.2_Homework.md  05.1_Securing_LLM_applications.md  05.2_Homework.md  06.1_Code_Generation.md  06.2_Coding_Agents.md  06.3_Homework.md  07.1_Exercises_Code_Summarization.md  07.2_Code_Analysis.md  07.3_Homework.md  08.1_Exercises_Commands_and_Configurations.md  08.2_Command_agents.md  08.3_Homework.md  09.1_Vulnerabilities_and_Exploitation.md  09.2_Vulnerability_Tools.md  09.3_Homework.md  10.1__Threat_Intelligence.md  10.2_Social_Engineering.md  10.3_Final_project.md
src/gensec_template/: __init__.py  __main__.py  cache.py  cli.py  config.py  generator.py  models.py  parser.py  scraper.py
tests/: __init__.py
